# fukurou

./: Cargo.toml  readme.md
crates/fukurou_core/: Cargo.toml
crates/fukurou_core/src/: app_state.rs  cache.rs  config.rs  credentials.rs  file_id.rs  item_id.rs  lib.rs  session.rs  track_loader.rs  utils.rs
crates/fukurou_gui/: Cargo.toml
crates/fukurou_gui/qml/: BottomDrawer.qml  main.qml
crates/fukurou_gui/qml/components/: Button.qml  ClickableLabel.qml  RoundedImage.qml  Slider.qml  VerticalTabBar.qml
crates/fukurou_gui/src/: app_state.rs  helpers.rs  lib.rs  qt_resources.rs  theme.rs
crates/fukurou_gui/src/model/: mod.rs  playlist_model.rs
crates/fukurou_helpers/: Cargo.toml
crates/fukurou_helpers/src/: lib.rs
crates/fukurou_player/: Cargo.toml
crates/fukurou_player/src/: lib.rs
fukurou/: Cargo.toml  build.rs
fukurou/src/: main.rs
