[package]
name = "fukurou"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fukurou_gui = { workspace = true }

env_logger = { workspace = true }
qmetaobject = { workspace = true }

# [build-dependencies]
# cpp_build = "0.5.8"
