# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "fukurou_core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
# ureq = { workspace = true }
parking_lot = { workspace = true }
serde =  { workspace = true }
serde_json =  { workspace = true }

directories = "5.0.1"
